--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
 :root {
     --black-color: #19161a;
     --white-color: #ffffff;
-    --blue-color: #445669;
+    --blue-color: #101B31;
     --silver-color: #c2b7ad;
     --brown-color: #45403c;
     --beige-color: #e8dcc6;
     --orange-color: #dd8033;
-    --second-orange-color: #d8792b;
+    --second-orange-color: #BC6E2D;
 }
 
 /* general */
@@ -46,7 +46,136 @@ body {
     width: 1px;
 }
 
+/* header */
+.header {
+    margin-bottom: 1rem;
+}
+
+.header-wrapper {
+    padding: 2rem 0 1rem;
+    text-align: center;
+}
+
+.main-header {
+    margin: 0 0 0.5rem;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: var(--blue-color);
+}
+
+.second-header {
+    margin: 0;
+    font-weight: 500;
+}
+
+/* hero */
+.hero {
+    background: var(--blue-color);
+}
+
+.hero-wrapper {
+    padding: 3rem 0;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+}
+
+.hero-benefits {
+    width: 100%;
+    margin: 2rem 0 0;
+    text-align: center;
+}
+
+.benefits-list {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 2rem;
+    color: var(--white-color);
+    line-height: 2;
+}
+
+.benefits-strong {
+    text-transform: uppercase;
+}
+
+.benefits-icon {
+    margin-right: 0.5rem;
+}
+
+.hero-btn-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn {
+    padding: 1rem 2.5rem;
+    background: var(--orange-color);
+    color: var(--white-color);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.btn:hover {
+    background: var(--second-orange-color);
+}
+
+.hero-btn-span {
+    margin-top: 0.5rem;
+    color: var(--white-color);
+    font-size: 0.8rem;
+}
+
+.hero-photo {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    overflow: hidden;
+    border: 1.5px solid var(--white-color);
+}
+
+.hero-photo img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    transition: transform 0.3s;
+}
+
+.hero-photo img:hover {
+    transform: scale(1.2);
+}
+
 /* media queries*/
 @media only screen and (min-width: 1000px) {
+    .main-header {
+        font-size: 2.5rem;
+    }
 
+    .hero-wrapper {
+        padding: 4rem 0;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .hero-benefits {
+        width: 50%;
+        margin: 1rem 1rem 0 0;
+        text-align: left;
+    }
+
+    .benefits-list {
+        margin-bottom: 4rem;
+        line-height: 2.5;
+    }
+
+    .hero-btn-wrapper {
+        width: 60%;
+    }
+
+    .hero-photo {
+        width: 50%;
+    }
 }
