--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ body {
 /* hero */
 .hero {
     background: var(--blue-color);
+    margin-bottom: 1.5rem;
 }
 
 .hero-wrapper {
@@ -84,6 +85,10 @@ body {
     width: 100%;
     margin: 2rem 0 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .benefits-list {
@@ -140,12 +145,111 @@ body {
 .hero-photo img {
     width: 100%;
     height: 100%;
-    border-radius: 5px;
     transition: transform 0.3s;
 }
 
 .hero-photo img:hover {
     transform: scale(1.2);
+}
+
+/* reviews */
+.reviews {
+    margin-bottom: 2.5rem;
+}
+
+.hide-header {
+    display: none;
+}
+
+.reviews-wrapper {
+    padding: 3rem 2.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.opinion {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2.5rem;
+}
+
+.opinion-photo {
+    width: 150px;
+    height: 150px;
+    margin: 0 3rem 0 0;
+}
+
+.opinion-photo:nth-of-type(2) {
+    margin: 0 0 0 3rem;
+}
+
+.opinion-photo img {
+    width: 100%;
+    border: 1.5px solid var(--beige-color);
+    border-radius: 50%;
+}
+
+.opinion-text {
+    width: 80%;
+    padding: 0.5rem 1rem;
+    font-size: 0.8rem;
+    border: 2px solid var(--beige-color);
+    border-radius: 15px;
+    position: relative;
+}
+
+.opinion-text span {
+    font-weight: 700;
+}
+
+.triangle {
+    width: 30px;
+    height: 30px;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    position: absolute;
+    top: 50%;
+    margin-top: -25px;
+}
+
+.left-triangle {
+    border-right: 30px solid var(--beige-color);
+    border-left: 25px solid transparent;
+    left: 0;
+    margin-left: -55px;
+}
+
+.right-triangle {
+    border-right: 25px solid transparent;
+    border-left: 30px solid var(--beige-color);
+    right: 0;
+    margin-right: -55px;
+}
+
+.triangle-inside {
+    width: 29px;
+    height: 29px;
+    border-top: 25px solid transparent;
+    border-bottom: 25px solid transparent;
+    position: absolute;
+    top: 50%;
+    margin-top: -24.5px;
+}
+
+.left-triangle-inside {
+    border-right: 29px solid var(--white-color);
+    border-left: 25px solid transparent;
+    left: 0;
+    margin-left: -20px;
+}
+
+.right-triangle-inside {
+    border-right: 25px solid transparent;
+    border-left: 29px solid var(--white-color);
+    right: 0;
+    margin-right: -20px;
 }
 
 /* media queries*/
@@ -163,7 +267,6 @@ body {
     .hero-benefits {
         width: 50%;
         margin: 1rem 1rem 0 0;
-        text-align: left;
     }
 
     .benefits-list {
