--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,11 @@ body {
 
 /* header */
 .header {
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .header-wrapper {
-    padding: 2rem 0 1rem;
+    padding: 2rem 0 0;
     text-align: center;
 }
 
@@ -64,7 +64,6 @@ body {
 }
 
 .second-header {
-    margin: 0;
     font-weight: 500;
 }
 
@@ -260,6 +259,7 @@ body {
 /* quotation */
 .quotation {
     background: var(--silver-color);
+    margin-bottom: 2.5rem;
 }
 
 .quotation-wrapper {
@@ -278,8 +278,60 @@ body {
     font-weight: 300;
 }
 
+/* articles */
+.articles {
+    padding: 3rem 0;
+}
+
+.articles-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.articles-header {
+    color: var(--blue-color);
+    position: relative;
+}
+
+.articles-header::before {
+    content: "";
+    width: 80%;
+    height: 2.5px;
+    background: var(--beige-color);
+    position: absolute;
+    left: 0;
+    margin-left: 10%;
+    bottom: 0;
+    margin-bottom: -15px;
+}
+
+.articles-box {
+    margin: 1rem 0 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.article {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.article-list {
+    font-weight: 700;
+}
+
+.article-list li {
+    font-weight: 500;
+}
+
 /* media queries*/
 @media only screen and (min-width: 1000px) {
+
     /* header */
     .main-header {
         font-size: 2.5rem;
@@ -350,5 +402,17 @@ body {
 
     .triangle-inside {
         display: block;
+    }
+
+    /* articles */
+    .articles-box {
+        margin: 2rem 0 3.5rem;
+        flex-direction: row;
+    }
+
+    .article {
+        width: 30%;
+        padding: 0.5rem 1rem;
+        margin: 0.5rem 1rem;
     }
 }
