--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
     --brown-color: #45403c;
     --beige-color: #e8dcc6;
     --orange-color: #dd8033;
+    --red-color: #BF3F3F;
+    --green-color: #3FBF7F;
     --second-orange-color: #BC6E2D;
 }
 
@@ -280,7 +282,7 @@ body {
 
 /* articles */
 .articles {
-    padding: 3rem 0;
+    padding: 1rem 0;
 }
 
 .articles-wrapper {
@@ -308,7 +310,7 @@ body {
 }
 
 .articles-box {
-    margin: 1rem 0 2rem;
+    margin: 1rem 0;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -327,6 +329,68 @@ body {
 
 .article-list li {
     font-weight: 500;
+}
+
+/* promotion */
+.promotion {
+    padding: 2rem 0;
+    margin-bottom: 2.5rem;
+}
+
+.promotion-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.promotion-photo {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.promotion-photo img {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.3s;
+}
+
+.promotion-photo img:hover {
+    transform: scale(1.4);
+}
+
+.promotion-text {
+    width: 100%;
+    text-align: center;
+    line-height: 2;
+    margin-top: 2rem;
+}
+
+.promotion-header {
+    color: var(--blue-color);
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.promotion-days-counter {
+    font-size: 4rem;
+    color: var(--blue-color);
+}
+
+.promotion-old-price {
+    color: var(--red-color);
+}
+
+.promotion-price {
+    font-size: 1.5rem;
+    color: var(--green-color);
+}
+
+.promotion-date {
+    font-size: 0.8rem;
 }
 
 /* media queries*/
@@ -405,8 +469,12 @@ body {
     }
 
     /* articles */
+    .articles {
+        padding: 2rem 0 2.5rem;
+    }
+
     .articles-box {
-        margin: 2rem 0 3.5rem;
+        margin: 2rem 0;
         flex-direction: row;
     }
 
@@ -414,5 +482,20 @@ body {
         width: 30%;
         padding: 0.5rem 1rem;
         margin: 0.5rem 1rem;
+    }
+
+    /* promotion */
+    .promotion-wrapper {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .promotion-photo {
+        width: 50%;
+    }
+
+    .promotion-text {
+        width: 50%;
+        margin-top: 0;
     }
 }
